unpackaged/main/default/objects/SFDCSubscriptionContract__c/SFDCSubscriptionContract__c.object-meta.xml
<CustomObject>
    <description>This app was created during investment day for the purpose of tracking the SFDC subscription and all third-party integrations into SFDC renewal dates. 

The initial intent is for this object and related objects to help:
-Overall contract details(mimic spreadsheet that existed on creation of this app May 2023)
Provide micro-detail of contact(IE line items) 
-Provide renewal windows
Reportable to review contracts  that are coming up for renewal
-Business use of the subscription 
-What team managed the payment
-What would cause us to drop or look for other options
-Reportable</description>
    <label>SFDC Subscription Contract</label>
    <nameField>
        <label>SFDC Subscription Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Subscription Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>