unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Business_Use__c.field-meta.xml
<CustomField>
    <fullName>Business_Use__c</fullName>
    <label>Business Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>CM/DFM</fullName>
            </value>
            <value>
                <fullName>GNO</fullName>
            </value>
            <value>
                <fullName>Partner Management</fullName>
            </value>
            <value>
                <fullName>PSE</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Spec Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>