unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Business_Use_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Use_Details__c</fullName>
    <label>Business Use Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>