unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/ContractTotalActive__c.field-meta.xml
<CustomField>
    <fullName>ContractTotalActive__c</fullName>
    <description>Rollup from Line Items</description>
    <label>Contract Total (Active)</label>
    <summarizedField>SFDCSubscriptionContractLineItem__c.TotalInvoicedAmount__c</summarizedField>
    <summaryFilterItems>
        <field>SFDCSubscriptionContractLineItem__c.Line_Item_Status__c</field>
        <operation>equals</operation>
        <value>Active, Renew Review</value>
    </summaryFilterItems>
    <summaryForeignKey>SFDCSubscriptionContractLineItem__c.SFDC_Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>