unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/ContractTotalNonActive__c.field-meta.xml
<CustomField>
    <fullName>ContractTotalNonActive__c</fullName>
    <label>Contract Total (Non Active)</label>
    <summarizedField>SFDCSubscriptionContractLineItem__c.TotalInvoicedAmount__c</summarizedField>
    <summaryFilterItems>
        <field>SFDCSubscriptionContractLineItem__c.Line_Item_Status__c</field>
        <operation>notEqual</operation>
        <value>Active, Renew Review</value>
    </summaryFilterItems>
    <summaryForeignKey>SFDCSubscriptionContractLineItem__c.SFDC_Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>