unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Current_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Effective_Start_Date__c</fullName>
    <label>Current Effective Start Date</label>
    <type>Date</type>
</CustomField>