unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Primary_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_POC_Email__c</fullName>
    <label>Primary POC Email</label>
    <type>Email</type>
</CustomField>