unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Primary_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_POC_Phone__c</fullName>
    <label>Primary POC Phone</label>
    <type>Phone</type>
</CustomField>