unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Primary_Vendor_POC_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor_POC_Name__c</fullName>
    <label>Primary Vendor POC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>