unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambition</fullName>
            </value>
            <value>
                <fullName>BoFC</fullName>
            </value>
            <value>
                <fullName>Box.com</fullName>
            </value>
            <value>
                <fullName>CaptivateIQ</fullName>
            </value>
            <value>
                <fullName>Cloudingo</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>D&amp;B</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>NeuraFlash</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>S-3</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Vonage</fullName>
            </value>
            <value>
                <fullName>Workato</fullName>
            </value>
            <value>
                <fullName>ZenDesk</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>