unpackaged/main/default/objects/SFDCSubscriptionContract__c/fields/Xom_Subscription_Owner__c.field-meta.xml
<CustomField>
    <fullName>Xom_Subscription_Owner__c</fullName>
    <label>Xom Subscription Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>