unpackaged/main/default/objects/SFDCSubscriptionContract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Primary_Vendor_POC_Name__c</columns>
    <columns>Current_Effective_Start_Date__c</columns>
    <columns>Current_Effective_End_Date__c</columns>
    <columns>Primary_POC_Email__c</columns>
    <columns>Primary_POC_Phone__c</columns>
    <columns>Xom_Subscription_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>